--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+<div class="main">
+    <div class="header">
+
+    </div>
+    <div class="main-content">
+
+    </div>
+    <div class="footer">
+        
+    </div>
+</div>
 </body>
 </html>
