--- a/index.html
+++ b/index.html
@@ -8,15 +8,44 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
+<!-- MAIN CONTAINER -->
 <div class="main">
-    <div class="header">
 
+<!-- HEADER -->
+    <div class="header">
+        <div class="logo">Header Logo</div>
     </div>
+<!-- SIDEBAR -->
+    <div class="sidebar">
+        <h2>Dashboard</h2>
+        <div class="side-content">Box 1</div>
+        <div class="side-content">Box 2</div>
+        <div class="side-content">Box 3</div>
+    </div>
+
+<!-- MAIN CONTENT -->
     <div class="main-content">
 
+
+        <div class="projects">
+            <h3>Projects</h3>
+            <div class="project-content">Project 1</div>
+            <div class="project-content">Project 2</div>
+            <div class="project-content">Project 3</div>
+            <div class="project-content">Project 4</div>
+        </div>
+
+        <div class="announcements">
+            <h3>Announcements</h3>
+            <div class="side-content">announcement 1</div>
+            <div class="side-content">announcement 2</div>
+            <div class="side-content">announcement 3</div>
+        </div>
     </div>
+
+<!-- FOOTER -->
     <div class="footer">
-        
+
     </div>
 </div>
 </body>
