Rudimentary layout elements completed

--- a/index.html
+++ b/index.html
@@ -13,33 +13,53 @@
 
 <!-- HEADER -->
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo"><h3>Header Logo</h3></div>
     </div>
 <!-- SIDEBAR -->
     <div class="sidebar">
         <h2>Dashboard</h2>
-        <div class="side-content">Box 1</div>
-        <div class="side-content">Box 2</div>
-        <div class="side-content">Box 3</div>
+        <div class="site-navigation">
+        <div class="side-content">Home</div>
+        <div class="side-content">Profile</div>
+        <div class="side-content">Messages</div>
+        <div class="side-content">History</div>
+        <div class="side-content">Tasks</div>
+        <div class="side-content">Communities</div>
+        </div>
+
+        <div class="settings">
+        <div class="side-content">Settings</div>
+        <div class="side-content">Support</div>
+        <div class="side-content">Privacy</div>
+        </div>
     </div>
 
 <!-- MAIN CONTENT -->
     <div class="main-content">
 
-
+        <h3>Projects</h3>
         <div class="projects">
-            <h3>Projects</h3>
             <div class="project-content">Project 1</div>
             <div class="project-content">Project 2</div>
             <div class="project-content">Project 3</div>
             <div class="project-content">Project 4</div>
+            <div class="project-content">Project 5</div>
         </div>
 
         <div class="announcements">
             <h3>Announcements</h3>
+            <div class="announcements-feed">
             <div class="side-content">announcement 1</div>
             <div class="side-content">announcement 2</div>
             <div class="side-content">announcement 3</div>
+            </div>
+
+            <h3>Trending</h3>
+            <div class="trending-feed">
+            <div class="side-content">Trend 1</div>
+            <div class="side-content">Trend 2</div>
+            <div class="side-content">Trend 3</div>
+            </div>
         </div>
     </div>
 
