Material Icons + formatting
Add Google Material Icons to sidebar menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -19,18 +20,18 @@
     <div class="sidebar">
         <h2>Dashboard</h2>
         <div class="site-navigation">
-        <div class="side-content">Home</div>
-        <div class="side-content">Profile</div>
-        <div class="side-content">Messages</div>
-        <div class="side-content">History</div>
-        <div class="side-content">Tasks</div>
-        <div class="side-content">Communities</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">house</i>Home</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">person</i>Profile</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">mail</i>Messages</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">history</i>History</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">diamond</i>Tasks</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">diversity_1</i>Communities</div>
         </div>
 
         <div class="settings">
-        <div class="side-content">Settings</div>
-        <div class="side-content">Support</div>
-        <div class="side-content">Privacy</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">settings</i>Settings</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">contact_support</i>Support</div>
+        <div class="side-content"><i class="material-icons" style="font-size:18px;">security</i>Privacy</div>
         </div>
     </div>
 
@@ -44,6 +45,7 @@
             <div class="project-content">Project 3</div>
             <div class="project-content">Project 4</div>
             <div class="project-content">Project 5</div>
+            <div class="project-content">Project 6</div>
         </div>
 
         <div class="announcements">
