--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <!-- HEADER -->
     <div class="header">
         <div class="logo"><h3>Header Logo</h3></div>
+        <div class="header-search"><i class="material-icons">search</i><input type="text" placeholder="Search.."></div>
+        <div class="header-menu">
+            <i class="material-icons">circle_notifications</i>
+            <img src="img/profile.jpg" alt="User profile" class="profile-pic" width="80" height="80">
+        </div>
     </div>
 <!-- SIDEBAR -->
     <div class="sidebar">
