Sidebar grid set up

--- a/index.html
+++ b/index.html
@@ -14,29 +14,34 @@
 
 <!-- HEADER -->
     <div class="header">
-        <div class="logo"><h3>Header Logo</h3></div>
-        <div class="header-search"><i class="material-icons">search</i><input type="text" placeholder="Search.."></div>
-        <div class="header-menu">
+        <div class="logo header-item">
+            <h3 class="header-item">Header Logo</h3>
+        </div>
+        <div class="header-search header-item">
+            <i class="material-icons header-item">search</i><input type="text" placeholder="Search..">
+        </div>
+        <div class="header-menu header-item">
             <i class="material-icons">circle_notifications</i>
-            <img src="img/profile.jpg" alt="User profile" class="profile-pic" width="80" height="80">
+            <img src="img/profile.jpg" alt="User profile" class="profile-pic header-item" width="50" height="50">
+            <span class="user-name header-item">Antero Tienaho</span>
         </div>
     </div>
 <!-- SIDEBAR -->
     <div class="sidebar">
         <h2>Dashboard</h2>
         <div class="site-navigation">
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">house</i>Home</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">person</i>Profile</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">mail</i>Messages</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">history</i>History</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">diamond</i>Tasks</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">diversity_1</i>Communities</div>
+        <div class="side-content"><i class="material-icons">house</i><span>Home</span></div>
+        <div class="side-content"><i class="material-icons">person</i>Profile</div>
+        <div class="side-content"><i class="material-icons">mail</i>Messages</div>
+        <div class="side-content"><i class="material-icons">history</i>History</div>
+        <div class="side-content"><i class="material-icons">diamond</i>Tasks</div>
+        <div class="side-content"><i class="material-icons">diversity_1</i>Communities</div>
         </div>
 
         <div class="settings">
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">settings</i>Settings</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">contact_support</i>Support</div>
-        <div class="side-content"><i class="material-icons" style="font-size:18px;">security</i>Privacy</div>
+        <div class="settings-content"><i class="material-icons">settings</i><span>Settings</span></div>
+        <div class="settings-content"><i class="material-icons">contact_support</i>Support</div>
+        <div class="settings-content"><i class="material-icons">security</i>Privacy</div>
         </div>
     </div>
 
@@ -56,16 +61,16 @@
         <div class="announcements">
             <h3>Announcements</h3>
             <div class="announcements-feed">
-            <div class="side-content">announcement 1</div>
-            <div class="side-content">announcement 2</div>
-            <div class="side-content">announcement 3</div>
+            <div class="announcements-content">announcement 1</div>
+            <div class="announcements-content">announcement 2</div>
+            <div class="announcements-content">announcement 3</div>
             </div>
 
             <h3>Trending</h3>
             <div class="trending-feed">
-            <div class="side-content">Trend 1</div>
-            <div class="side-content">Trend 2</div>
-            <div class="side-content">Trend 3</div>
+            <div class="announcements-content">Trend 1</div>
+            <div class="announcements-content">Trend 2</div>
+            <div class="announcements-content">Trend 3</div>
             </div>
         </div>
     </div>
