LAYOUT basics complete

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 <!-- SIDEBAR -->
     <div class="sidebar">
-        <h2>Dashboard</h2>
+        <h2 class="sidebar-heading">Dashboard</h2>
         <div class="site-navigation">
         <div class="side-content"><i class="material-icons">house</i><span>Home</span></div>
         <div class="side-content"><i class="material-icons">person</i>Profile</div>
