RIGHT side cards (announcements / trending)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- MAIN CONTENT -->
     <div class="main-content">
 
-        <h3>Projects</h3>
+        <h3 class="projects-heading">Projects</h3>
         <div class="projects">
             <div class="project-content">Project 1</div>
             <div class="project-content">Project 2</div>
@@ -59,15 +59,16 @@
         </div>
 
         <div class="announcements">
-            <h3>Announcements</h3>
             <div class="announcements-feed">
+            <h3 class="announcements-heading">Announcements</h3>
             <div class="announcements-content">announcement 1</div>
             <div class="announcements-content">announcement 2</div>
             <div class="announcements-content">announcement 3</div>
             </div>
 
-            <h3>Trending</h3>
+            
             <div class="trending-feed">
+            <h3 class="announcements-heading">Trending</h3>
             <div class="announcements-content">Trend 1</div>
             <div class="announcements-content">Trend 2</div>
             <div class="announcements-content">Trend 3</div>
