--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
     </div>
 <!-- SIDEBAR -->
     <div class="sidebar">
-        <h2 class="sidebar-heading">Dashboard</h2>
-        <div class="site-navigation">
-        <div class="side-content"><i class="material-icons">house</i><span>Home</span></div>
-        <div class="side-content"><i class="material-icons">person</i>Profile</div>
-        <div class="side-content"><i class="material-icons">mail</i>Messages</div>
-        <div class="side-content"><i class="material-icons">history</i>History</div>
-        <div class="side-content"><i class="material-icons">diamond</i>Tasks</div>
-        <div class="side-content"><i class="material-icons">diversity_1</i>Communities</div>
-        </div>
+        <h2 class="sidebar-heading"><i class="material-icons">hive</i>Dashboard</h2>
+        <ul class="site-navigation">
+        <li class="side-content"><i class="material-icons">house</i><span>Home</span></li>
+        <li class="side-content"><i class="material-icons">person</i>Profile</li>
+        <li class="side-content"><i class="material-icons">mail</i>Messages</li>
+        <li class="side-content"><i class="material-icons">history</i>History</li>
+        <li class="side-content"><i class="material-icons">diamond</i>Tasks</li>
+        <li class="side-content"><i class="material-icons">groups</i>Communities</li>
+        </ul>
 
-        <div class="settings">
-        <div class="settings-content"><i class="material-icons">settings</i><span>Settings</span></div>
-        <div class="settings-content"><i class="material-icons">contact_support</i>Support</div>
-        <div class="settings-content"><i class="material-icons">security</i>Privacy</div>
-        </div>
+        <ul class="settings">
+        <li class="settings-content"><i class="material-icons">settings</i><span>Settings</span></li>
+        <li class="settings-content"><i class="material-icons">contact_support</i>Support</li>
+        <li class="settings-content"><i class="material-icons">security</i>Privacy</li>
+        </ul>
     </div>
 
 <!-- MAIN CONTENT -->
