MORE PROGRESS (icons, etc)
ADD icons for projects
Project boxes styling
Text additions + some styling for them

--- a/index.html
+++ b/index.html
@@ -47,15 +47,68 @@
 
 <!-- MAIN CONTENT -->
     <div class="main-content">
-
         <h3 class="projects-heading">Projects</h3>
         <div class="projects">
-            <div class="project-content">Project 1</div>
-            <div class="project-content">Project 2</div>
-            <div class="project-content">Project 3</div>
-            <div class="project-content">Project 4</div>
-            <div class="project-content">Project 5</div>
-            <div class="project-content">Project 6</div>
+            <div class="project-content">
+                <div class="project-text">
+                    Cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div>
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
+            <div class="project-content">
+                <div class="project-text">
+                    Cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div>
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
+            <div class="project-content">
+                <div class="project-text">
+              Cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div>
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
+            <div class="project-content">
+                <div class="project-text">
+                    Cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div>
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
+            <div class="project-content">
+                <div class="project-text">
+                    Cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div>
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
         </div>
 
         <div class="announcements">
