PROJECT cards complete

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
-                <div>
+                <div class="project-button-container">
                     <button class="project-icons"><i class="material-icons">bookmark</i></button>
                     <button class="project-icons"><i class="material-icons">open_in_new</i></button>
                     <button class="project-icons"><i class="material-icons">share</i></button>
@@ -67,7 +67,7 @@
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
-                <div>
+                <div class="project-button-container">
                     <button class="project-icons"><i class="material-icons">bookmark</i></button>
                     <button class="project-icons"><i class="material-icons">open_in_new</i></button>
                     <button class="project-icons"><i class="material-icons">share</i></button>
@@ -79,7 +79,7 @@
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
-                <div>
+                <div class="project-button-container">
                     <button class="project-icons"><i class="material-icons">bookmark</i></button>
                     <button class="project-icons"><i class="material-icons">open_in_new</i></button>
                     <button class="project-icons"><i class="material-icons">share</i></button>
@@ -91,7 +91,7 @@
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
-                <div>
+                <div class="project-button-container">
                     <button class="project-icons"><i class="material-icons">bookmark</i></button>
                     <button class="project-icons"><i class="material-icons">open_in_new</i></button>
                     <button class="project-icons"><i class="material-icons">share</i></button>
@@ -99,11 +99,23 @@
             </div>
             <div class="project-content">
                 <div class="project-text">
-                    Cool Project 
+                    Impossible Project 
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
-                <div>
+                <div class="project-button-container">
+                    <button class="project-icons"><i class="material-icons">bookmark</i></button>
+                    <button class="project-icons"><i class="material-icons">open_in_new</i></button>
+                    <button class="project-icons"><i class="material-icons">share</i></button>
+                </div>
+            </div>
+            <div class="project-content">
+                <div class="project-text">
+                    Semi-cool Project 
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
+                </div>
+                <div class="project-button-container">
                     <button class="project-icons"><i class="material-icons">bookmark</i></button>
                     <button class="project-icons"><i class="material-icons">open_in_new</i></button>
                     <button class="project-icons"><i class="material-icons">share</i></button>
