--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="projects">
             <div class="project-content">
                 <div class="project-text">
-                    Cool Project 
+                    Kinda ok Project 
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
@@ -63,7 +63,7 @@
             </div>
             <div class="project-content">
                 <div class="project-text">
-                    Cool Project 
+                    Boring Project 
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="project-content">
                 <div class="project-text">
-              Cool Project 
+              Dull Project 
               <br>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolore natus hic illo, officia minus deleniti voluptas fugit quisquam saepe quos recusandae itaque qui eum! Est, magni distinctio? Fuga, iusto.
                 </div>
