--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <!-- HEADER -->
     <div class="header">
 <!-- HEADER TOP ROW -->
-        <div class="logo header-item">
-            
-        </div>
+
         <div class="header-search header-item">
             <i class="material-icons header-item">search</i><input class="search" type="text" placeholder="Search..">
         </div>
@@ -28,8 +26,10 @@
         </div>
 <!-- HEADER 2ND ROW -->
         <div class="header-greeting">
-            <img src="img/profile.jpg" alt="User profile" class="profile-pic header-item" width="50" height="50">
-            <div class="user-greeting">Hello there, <br> <h3 class="user-name">Antero Tienaho (@tienaho)</h3></div>
+            <div>
+            <img src="img/profile.jpg" alt="User profile" class="profile-pic header-item main-profile-pic" width="50" height="50">
+            </div>
+            <div class="user-greeting">Hello there, <br> <span class="user-name">Antero Tienaho (@tienaho)</span></div>
         </div>
         <div class="header-buttons">
             <button class="quick-actions">New</button>
