Design complete Final work on the header and some other minor adjustments

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </div>
         <div class="header-menu header-item">
             <i class="material-icons header-item">circle_notifications</i>
+            <div class="header-user">
             <img src="img/profile.jpg" alt="User profile" class="profile-pic header-item" width="25" height="25">
             <span class="user-name header-item">Antero Tienaho</span>
+            </div>
         </div>
 <!-- HEADER 2ND ROW -->
         <div class="header-greeting">
